Compiled with problems.txt
Compiled with problems:
×
ERROR in ./src/components/MemberMobile/PaymentSystem.jsx
Module build failed (from ../node_modules/babel-loader/lib/index.js):
SyntaxError: D:\PROShael\alshuail-admin-arabic\src\components\MemberMobile\PaymentSystem.jsx: Unexpected token (246:2)

  244 | // Enhanced Balance Card Component
  245 | export function EnhancedBalanceCard(props) {
> 246 |   const memberData = props.memberData;
      |   ^
  247 |   const onPaymentClick = props.onPaymentClick;
  248 |   const onStatementClick = props.onStatementClick;
  249 |
    at constructor (D:\PROShael\node_modules\@babel\parser\lib\index.js:367:19)
    at FlowParserMixin.raise (D:\PROShael\node_modules\@babel\parser\lib\index.js:6630:19)
    at FlowParserMixin.unexpected (D:\PROShael\node_modules\@babel\parser\lib\index.js:6650:16)
    at FlowParserMixin.parseExprAtom (D:\PROShael\node_modules\@babel\parser\lib\index.js:11451:16)
    at FlowParserMixin.parseExprAtom (D:\PROShael\node_modules\@babel\parser\lib\index.js:4797:20)
    at FlowParserMixin.parseExprSubscripts (D:\PROShael\node_modules\@babel\parser\lib\index.js:11085:23)
    at FlowParserMixin.parseUpdate (D:\PROShael\node_modules\@babel\parser\lib\index.js:11070:21)
    at FlowParserMixin.parseMaybeUnary (D:\PROShael\node_modules\@babel\parser\lib\index.js:11050:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (D:\PROShael\node_modules\@babel\parser\lib\index.js:10903:61)
    at FlowParserMixin.parseExprOps (D:\PROShael\node_modules\@babel\parser\lib\index.js:10908:23)
    at FlowParserMixin.parseMaybeConditional (D:\PROShael\node_modules\@babel\parser\lib\index.js:10885:23)
    at FlowParserMixin.parseMaybeAssign (D:\PROShael\node_modules\@babel\parser\lib\index.js:10835:21)
    at FlowParserMixin.parseMaybeAssign (D:\PROShael\node_modules\@babel\parser\lib\index.js:3582:18)
    at FlowParserMixin.parseExpressionBase (D:\PROShael\node_modules\@babel\parser\lib\index.js:10788:23)
    at D:\PROShael\node_modules\@babel\parser\lib\index.js:10784:39
    at FlowParserMixin.allowInAnd (D:\PROShael\node_modules\@babel\parser\lib\index.js:12436:12)
    at FlowParserMixin.parseExpression (D:\PROShael\node_modules\@babel\parser\lib\index.js:10784:17)
    at FlowParserMixin.jsxParseExpressionContainer (D:\PROShael\node_modules\@babel\parser\lib\index.js:4665:31)
    at FlowParserMixin.jsxParseElementAt (D:\PROShael\node_modules\@babel\parser\lib\index.js:4744:36)
    at FlowParserMixin.jsxParseElement (D:\PROShael\node_modules\@babel\parser\lib\index.js:4782:17)
    at FlowParserMixin.parseExprAtom (D:\PROShael\node_modules\@babel\parser\lib\index.js:4792:19)
    at FlowParserMixin.parseExprSubscripts (D:\PROShael\node_modules\@babel\parser\lib\index.js:11085:23)
    at FlowParserMixin.parseUpdate (D:\PROShael\node_modules\@babel\parser\lib\index.js:11070:21)
    at FlowParserMixin.parseMaybeUnary (D:\PROShael\node_modules\@babel\parser\lib\index.js:11050:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (D:\PROShael\node_modules\@babel\parser\lib\index.js:10903:61)
    at FlowParserMixin.parseExprOps (D:\PROShael\node_modules\@babel\parser\lib\index.js:10908:23)
    at FlowParserMixin.parseMaybeConditional (D:\PROShael\node_modules\@babel\parser\lib\index.js:10885:23)
    at FlowParserMixin.parseMaybeAssign (D:\PROShael\node_modules\@babel\parser\lib\index.js:10835:21)
    at D:\PROShael\node_modules\@babel\parser\lib\index.js:3531:39
    at FlowParserMixin.tryParse (D:\PROShael\node_modules\@babel\parser\lib\index.js:6938:20)
    at FlowParserMixin.parseMaybeAssign (D:\PROShael\node_modules\@babel\parser\lib\index.js:3531:18)
    at D:\PROShael\node_modules\@babel\parser\lib\index.js:10804:39
    at FlowParserMixin.allowInAnd (D:\PROShael\node_modules\@babel\parser\lib\index.js:12436:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (D:\PROShael\node_modules\@babel\parser\lib\index.js:10804:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (D:\PROShael\node_modules\@babel\parser\lib\index.js:12503:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (D:\PROShael\node_modules\@babel\parser\lib\index.js:11683:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (D:\PROShael\node_modules\@babel\parser\lib\index.js:3624:18)
    at FlowParserMixin.parseExprAtom (D:\PROShael\node_modules\@babel\parser\lib\index.js:11335:23)
    at FlowParserMixin.parseExprAtom (D:\PROShael\node_modules\@babel\parser\lib\index.js:4797:20)
    at FlowParserMixin.parseExprSubscripts (D:\PROShael\node_modules\@babel\parser\lib\index.js:11085:23)
    at FlowParserMixin.parseUpdate (D:\PROShael\node_modules\@babel\parser\lib\index.js:11070:21)
    at FlowParserMixin.parseMaybeUnary (D:\PROShael\node_modules\@babel\parser\lib\index.js:11050:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (D:\PROShael\node_modules\@babel\parser\lib\index.js:10903:61)
    at FlowParserMixin.parseExprOps (D:\PROShael\node_modules\@babel\parser\lib\index.js:10908:23)
    at FlowParserMixin.parseMaybeConditional (D:\PROShael\node_modules\@babel\parser\lib\index.js:10885:23)
    at FlowParserMixin.parseMaybeAssign (D:\PROShael\node_modules\@babel\parser\lib\index.js:10835:21)
    at FlowParserMixin.parseMaybeAssign (D:\PROShael\node_modules\@babel\parser\lib\index.js:3582:18)
    at FlowParserMixin.parseExpressionBase (D:\PROShael\node_modules\@babel\parser\lib\index.js:10788:23)
    at D:\PROShael\node_modules\@babel\parser\lib\index.js:10784:39
    at FlowParserMixin.allowInAnd (D:\PROShael\node_modules\@babel\parser\lib\index.js:12431:16)
ERROR
[eslint] 
src\components\MemberMobile\PaymentSystem.jsx
  Line 246:2:  Parsing error: Unexpected token (246:2)
